add background images in style.css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-html {
-  background-image: url(https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwi_q9n-z-zUAhWDfhoKHaPAD-oQjRwIBw&url=http%3A%2F%2Fdailygeekshow.com%2Fmethode-scientifiques-pierre-feuille-ciseaux%2F&psig=AFQjCNFA2yPscEZbfuHmgpxP9_mWuaTWpQ&ust=1499154535442294);
+body {
+background-image: url(http://dailygeekshow.com/wp-content/uploads/2015/03/shutterstock_175134956.jpg);
+}
+
+section {
+text-align: center;
 }
