add font family in style.css

--- a/style.css
+++ b/style.css
@@ -4,4 +4,5 @@ background-image: url(http://dailygeekshow.com/wp-content/uploads/2015/03/shutte
 
 section {
 text-align: center;
+font-family: 'Indie Flower', cursive;
 }
