--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 body {
-background-image: url(http://dailyanimeart.files.wordpress.com/2012/09/they-play-rock-paper-scissors.jpg)   ;
+background-image: url(http://img05.deviantart.net/2fda/i/2014/060/0/0/background_naruto_by_nitopfam-d78kh4e.png)   ;
 background-size: cover;
 background-repeat: no-repeat;
 
 }
-
+*{
+  color: white;
+}
 section {
 margin-top: 10%;
 text-align: center;
