--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
 background-image: url(http://img05.deviantart.net/2fda/i/2014/060/0/0/background_naruto_by_nitopfam-d78kh4e.png)   ;
 background-size: cover;
 background-repeat: no-repeat;
+width: 100%;
+height: 100%;
 
 }
 *{
@@ -25,7 +27,7 @@ button{
   font-weight: bold;
   border-radius: 8px;
   text-decoration: none;
-
+display: none;
 
 }
 button:hover{
@@ -34,4 +36,8 @@ button:hover{
 }
 button:active{
   box-shadow: inset 3px 3px 3px 3px grey;
+}
+#pierre,#ciseaux,#feuille{
+
+  display: none;
 }
