--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   src: url(../font/njnaruto.ttf);
 }
 html{
-  height: 100
+  height: 100 %;
 }
 body {
 background-image: url(http://img05.deviantart.net/2fda/i/2014/060/0/0/background_naruto_by_nitopfam-d78kh4e.png)   ;
